# nash

./: Cargo.toml  README.md  backlog.md  docker-compose.yml  tech-debt.md
docker/: dockerfile
examples/: example-0.nash  example-1.nash  example-10.nash  example-11.nash  example-12.nash  example-13.nash  example-14.nash  example-15.nash  example-16.nash  example-17.nash  example-18.nash  example-19.nash  example-2.nash  example-20.nash  example-21.nash  example-22.nash  example-23.nash  example-24.nash  example-25.nash  example-26.nash  example-27.nash  example-3.nash  example-4.nash  example-5.nash  example-6.nash  example-7.nash  example-8.nash  example-9.nash  example-input.txt  example-output.txt  example.nash  run-examples.nash
scripts/: run-examples.nash
src/: constants.rs  errors.rs  keywords.rs  lib.rs  main.rs
src/components/: block.rs  builtins.rs  errors.rs  expression.rs  function.rs  literals.rs  mod.rs  operator.rs  root.rs  stack.rs  statement.rs  type_definition.rs  values.rs
src/components/expressions/: block.rs  (+9 more)
src/errors/: mod.rs
src/executer/: builtins.rs  commands.rs  mod.rs  operators.rs
src/executor/: builtins.rs  commands.rs  mod.rs  stack.rs  system_command_executor.rs  values.rs
src/lexer/: mod.rs  token_kinds.rs  tokens.rs
src/parser/: code_blocks.rs  expressions.rs  functions.rs  literals.rs  mod.rs  operators.rs  statements.rs
src/utils/: formatting.rs  iterators.rs  mod.rs
tests/: integration_test.rs  run-examples  run-examples.sh
tests/snapshots/: integration_test__tests__captured_values_should_be_immutable.snap  (+86 more)
(+36 files in other folders)
