[package]
name = "nash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
serde = { version = "1.0.208", features = ["derive"] }
unicode-segmentation = "1.11.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
mockall = "0.13.0"
